--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welkom | Workshop HTML en CSS</title>
+    <style>
+      h1 { 
+        COLOR: GREEN;
+        background-color: rgb(139, 146, 150);
+      }
+      h2{
+        color:brown;
+        background-color:  greenyellow
+      
+      }
+    </style>
   </head>
   <body>
-    <h1>Welkom</h1>
+    <h1><strong>heeeeeey</strong></h1>
     <p>
       Hallo en welkom op de workshop: ‘Bouw je eigen website met HTML &amp;
       CSS’.
+    </p>
+    <p> <a href=""
+
     </p>
   </body>
 </html>
